[gd_scene load_steps=3 format=3 uid="uid://br5s80vd8eryh"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_tbsie"]
[ext_resource type="AudioStream" uid="uid://bblko40urwhbr" path="res://assets/sounds/hurt.wav" id="2_tcxfi"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_tbsie")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_tcxfi")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
